--- a/src/Components/Stylesheet/BlazeScreenshot.css
+++ b/src/Components/Stylesheet/BlazeScreenshot.css
@@ -7,28 +7,88 @@
 }
 .screenshot{
     min-height: 100vh;
+    position: relative;
+    top: 100px;
 }
-.screenshot .boxDesign {
-  width: 80%;
-  padding: 20px;
-  margin: 0 auto;
+
+.screenshot .phone {
+  margin: 5%;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
 }
-.screenshot .boxDesign .box img {
-  width: 90%;
-  display: block;
-  border-radius: 5px;
+
+.phone_plan {
+  width: 250px;
+  height: 180px;
+  margin-left: 1%;
+  margin-right: 1%;
+  border: 1px solid rgb(201, 217, 246);
+  background:rgb(201, 217, 246);
+  border-radius: 10px;
+  
 }
-.screenshot .boxDesign .box {
-  /* box-shadow: 0 0 18px 2px rgba(0, 0, 0, 0.1); */
+
+.plan_name{
+  font-size: 36px;
+  text-align: center;
+  margin: 10px 0;
+}
+
+.list {
+  margin-left: 10%;
+  
+}
+
+.plan_disc {
+  color: black;
+  font-size: 14px;
+  text-align: left;
+  position: relative;
+  bottom: 30px;
+}
+
+.plan_btn {
+  width: 140px;
+  padding: 12px 10px;
+  background-color: #2e6ca5;
+  color: white;
+  border: none;
+  border-radius: 7px;
+  text-align: center;
+  display: inline-block;
+  position: relative;
+  bottom: 40px;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+.plan_btn span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
   transition: 0.5s;
 }
-.screenshot .boxDesign .box:hover {
-  transform: scale(1.05);
-  z-index: 2;
+
+.plan_btn:after {
+  content: "Buy now!";  
+  position: absolute;
+  opacity: 0;
+  top: 12px;
+  right: 0px;
+  left: 0px;
+  transition: 0.5s;
+  
 }
+
+.plan_btn:hover span {
+  opacity: 0;
+}
+
+.plan_btn:hover:after {
+  opacity: 1;
+  right: 0;
+}
+
 .screenshot .blazeScreenshot .sslink {
   display: inline-block;
   margin-block: 2px;
